# Multiprecision-data-refactor

./: .gitignore  CMakeLists (copy).txt  CMakeLists.txt  README.md  SZ3_CMakeLists.txt  build_script.sh  mgard_ec_refactor.80s-10003,vesaulov1-virtual-machine.btr  mgard_ec_refactor.80s-10189,vesaulov1-virtual-machine.btr  mgard_ec_refactor.80s-10914,vesaulov1-virtual-machine.btr  mgard_ec_refactor.80s-59867,vesaulov1-virtual-machine.btr  out.txt  out.txtpython  outp.txt  outp2.txt  output.txt  output2.txt  t1.txt  t2.txt
data/: measure.txt  o2.txt  out.txt  outdesktop.txt  outlaptop.txt  outputdesktop6pm.txt  visualization1024.ipynb  visualization2048.ipynb  visualization4096.ipynb  visualiztion8192.ipynb
include/Decomposer/: MGARD.hpp
include/ErrorEstimator/: MaxErrorEstimator.hpp
include/SizeInterpreter/: changed-GreedyBasedSizeInterpreter.hpp
other/boostretrans/: client  message.pb.cc  message.pb.h  message.proto  program  program.cpp  receiver.cpp  sender.cpp  server
other/boostudp/: fragment.pb.cc  fragment.pb.h  fragment.proto  receiver  receiver.cpp  sender  sender.cpp
other/liberasure/: program.cpp
other/poco/: poco  poco.cpp  udp_receiver  udp_receiver.cpp  udp_sender  udp_sender.cpp
other/qt/: CMakeLists.txt  message.pb.cc  message.pb.h  message.proto  receiver  receiver.cpp  sender  sender.cpp
other/simpy/: formula.py  formulaModule sc2.py  formulaModule.py  latency.py  main.py  simulation sc2.py  simulation tcp work.py  simulation tcp2.py  simulation.py  simulation_timeconstraint.py  simulationadaptive.py  simulationadaptive_linear_interpolation.py  simulationadaptive_mintime.py  simulationadaptive_timeseries.py  simulationadaptive_with_error_bound.py  tcp_no_sack.py  tempCodeRunnerFile.py  test.py  udpsimulation.py  weibull.py
other/udpsocketprogramming/: client  client.cpp  fragment.pb.h  server  server.cpp
other/zmqexamples/: message.pb.cc  message.pb.h  message.proto  receiver  receiver.cpp  sender.cpp  tmp.txt  udp_receiver  udp_sender
other/zmqexamples/bard/: publisher.cpp  subscriber.cpp
other/zmqexamples/blogspot/: example.cpp  message.pb.cc  message.pb.h  message.proto
other/zmqexamples/python/: sender.py  zmqexample.py
other/zmqexamples/test_radio_dish_udp/: radio.cpp  sender  test_radio_dish_udp.h  test_radio_dish_udp_receiver.cpp  test_radio_dish_udp_sender.cpp
other/zmqexamples/zmq0124/: receiver  receiver.cpp  sender  sender.cpp  test_radio_dish_udp.h
other/zmqexamples/zmqofficial/: boost  boost.cpp  client.cpp  fragment.pb.cc  fragment.proto  receiver  receiver.cpp  sender  sender.cpp  server.cpp
other/zmqexamples/zmqofficial2/zmqofficial/: client  client.cpp  (+5 more)
test/: CMakeLists.txt  boostex  boostex.cpp  client  client.cpp  exp  exp.cpp  exptimer  exptimer.cpp  fragment.pb.cc  fragment.pb.h  fragment.proto  mgard_ec_reconstruct (copy).cpp  mgard_ec_reconstruct wo retrans.cpp  mgard_ec_reconstruct(backup).cpp  mgard_ec_reconstruct.cpp  mgard_ec_reconstructTCP.cpp  mgard_ec_reconstructWoRetrans.cpp  mgard_ec_refactor.cpp  mgard_ec_refactor1101.cpp  mgard_ec_refactorCopy.cpp  mgard_ec_refactorRel2.cpp  mgard_ec_refactorTCP.cpp  mgard_ec_refactorWoRetrans.cpp  mgard_ec_refactorWorks.cpp  percent_retrans_values.txt  receiver  receiver.cpp  tmp.txt  weibull  weibull.cpp
test/light/: mgard_ec_reconstruct.cpp  mgard_ec_refactor.cpp  receiver.cpp  sender.cpp
test/new/: 1receiver_adaptive copy.cpp  1sender_adaptive copy.cpp  CMakeLists.txt  fragment.pb.cc  fragment.pb.h  fragment.proto  receiver_adaptive.cpp  sender_adaptive.cpp
test/new/globus/: generate_tiers  generate_tiers.cpp
test/new/sc2/: receiver_sc2.cpp  sender_sc2.cpp
test/new/tcp/: receiver_tcp.cpp  sender_tcp copy.cpp  sender_tcp.cpp
test/new/udp/: receiver_udp.cpp  sender_udp.cpp
